manifests/base/web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  labels:
    app.kubernetes.io/name: web
    training.k8rvis.io/security-baseline: insecure
spec:
  ingressClassName: nginx
  rules:
    - host: team-placeholder.training.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
